--- a/css/common.scss
+++ b/css/common.scss
@@ -1,5 +1,10 @@
 @import "reset.css";
 
+// foundation
+@import 'color';
+@import 'typography';
+@import 'space_shadow';
+
 
 @keyframes loading {
   0% {
