--- a/css/common.css
+++ b/css/common.css
@@ -1,1 +1,84 @@
 @import "reset.css";
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap");
+@keyframes loading {
+  0% {
+    stroke-dashoffset: 157;
+  }
+  75% {
+    stroke-dashoffset: -147;
+  }
+  100% {
+    stroke-dashoffset: -157;
+  }
+}
+@keyframes loading_spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.before_load .loading {
+  opacity: 1;
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background: #FFFFFF;
+  opacity: 0;
+  transition: 0.5s;
+}
+.loading .loading_circle {
+  width: 54px;
+  height: 54px;
+  animation: loading_spin 3s infinite;
+}
+.loading .loading_circle circle {
+  stroke: #0F6BFF;
+  stroke-width: 4;
+  stroke-dasharray: 157;
+  stroke-dashoffset: -157;
+  fill: none;
+  animation: loading 1s infinite;
+}
+
+body {
+  color: #0B0B0B;
+  line-height: 1.2;
+  font-size: 16px;
+  font-family: "Noto Sans KR", sans-serif;
+  word-wrap: break-word;
+  font-weight: 400;
+}
+
+* {
+  box-sizing: border-box;
+  outline: none !important;
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+}
+.main .top-visual {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+.main .top-visual .wave-txt .wave {
+  display: flex;
+}
+.main .top-visual .wave-txt .wave h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 4rem;
+  text-transform: uppercase;
+}
