--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 @import "reset.css";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 @keyframes loading {
   0% {
     stroke-dashoffset: 157;
@@ -15,6 +16,28 @@
 @keyframes loading_spin {
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes wave_reverse {
+  0% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
   }
 }
 .before_load .loading {
@@ -70,15 +93,49 @@ body {
   height: 100%;
 }
 .main .top-visual {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
+  transition: 1s ease;
+  background: #0B0B0B;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.main .top-visual .wave-txt {
+  display: flex;
+  flex-direction: column;
+}
+.main .top-visual .wave-txt .reverse {
+  animation: wave_reverse 40s infinite linear !important;
+}
+.main .top-visual .wave-txt .reverse h1 {
+  color: #C77BF9 !important;
+}
+.main .top-visual .wave-txt .reverse h1 em {
+  display: block;
+  height: fit-content;
 }
 .main .top-visual .wave-txt .wave {
+  position: relative;
   display: flex;
+  flex-shrink: 0;
+  animation: wave 40s infinite linear;
+  width: 100%;
 }
 .main .top-visual .wave-txt .wave h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 4rem;
+  font-family: "Anton", sans-serif;
+  font-size: 21vh;
+  font-weight: 500;
   text-transform: uppercase;
+  transition: 1s ease 0.3s;
+  position: relative;
+  top: 0;
+  white-space: nowrap;
+  margin: 0;
+  line-height: 0.9;
+  color: #5C9AFF;
+}
+.main .top-visual .wave-txt .wave h1 em {
+  display: block;
+  height: fit-content;
 }
