--- a/css/common.scss
+++ b/css/common.scss
@@ -159,6 +159,13 @@
 
 @media (max-width: 767px) {
 
+  .wave {
+
+    h1 {
+      font-size: 20vh !important;
+    }
+  }
+
   .kv-sticker {
 
     .sticker {
