--- a/css/common.scss
+++ b/css/common.scss
@@ -208,7 +208,7 @@
   .wave {
 
     h1 {
-      font-size: 18vh !important;
+      font-size: 21vh !important;
     }
   }
 
@@ -350,7 +350,6 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
   word-wrap: break-word;
   font-weight: 400;
-  background: $gray_120;
 }
 
 *{
@@ -363,22 +362,7 @@ body {
 .main {
   width: 100%;
   height: 100%;
-
-  .header {
-    width: 100%;
-    height: 6vh;
-    background: $gray_120;
-    display: flex;
-    align-items: center;
-    padding-left: 16px;
-
-    .go-home {
-      font-size: 20px;
-      font-family: 'Anton', sans-serif;
-      font-weight: 400;
-      color: white;
-    }
-  }
+  background: $gray_120;
 
   .top-visual {
     width: 100%;
@@ -415,7 +399,7 @@ body {
 
         h1 {
           font-family: 'Anton', sans-serif;
-          font-size: 21vh;
+          font-size: 22vh;
           font-weight: 500;
           text-transform: uppercase;
           transition: 1s ease .3s;
@@ -618,5 +602,180 @@ body {
         }
       }
     }
+  }
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+
+  p {
+    font-size: 14px;
+
+    &.dark {
+      color: $gray_20;
+    }
+
+    &.light {
+      color: $gray_80;
+    }
+  }
+}
+
+.con {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  div {
+    opacity: 0;
+  }
+
+  .section_on {
+    opacity: 1 !important;
+    transform:  translateZ(0) !important;
+    transition: transform 1.5s, opacity 1.5s !important; 
+  }
+
+  .top-visual {
+    width: 100%;
+    min-height: 100vh;
+    background: $gray_120;
+
+    img {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+    }
+  }
+
+  .sec-detail {
+    max-width: 1024px;
+    padding: 92px;
+    position: relative;
+    transition: all .2s ease-out;
+
+    &.headline {
+      &:after {
+        content: "";
+        position: absolute;
+        left: 92px;
+        bottom: 0;
+        right: 92px;
+        z-index: 5;
+        height: 1px;
+        background-color: $gray_10;
+      }
+    }
+
+    .title {
+      max-width: 1024px;
+      min-width: 1024px;
+      font-size: 60px;
+      font-weight: 400;
+      line-height: 1.4;
+      letter-spacing: -2px;
+      color: $gray_110;
+      word-break: keep-all;
+      white-space: pre-line;
+    }
+
+    h4 {
+      font-size: 44px;
+      font-weight: 400;
+      color: $gray_110;
+      max-width: 1024px;
+    }
+
+    p {
+      font-size: 16px;
+      font-weight: 400;
+      color: $gray_60;
+      margin-top: 24px;
+      line-height: 1.6;
+    }
+
+    span {
+      font-size: 16px;
+      font-weight: 400;
+      color: $gray_110;
+    }
+
+    .summary {
+      display: flex;
+      margin-top: 40px;
+      min-height: 78px;
+      flex-wrap: wrap;
+
+      dl {
+        padding-right: 7%;
+        width: 33.3%;
+        margin-top: 16px;
+
+        dt {
+          font-size: 16px;
+          font-weight: 700;
+          letter-spacing: -.1px;
+          line-height: 24px;
+          color: $gray_50;
+          vertical-align: top;
+        }
+
+        dd {
+          font-weight: 400;
+          display: flex;
+          margin-top: 8px;
+          
+          span {
+            min-width: 28px;
+            max-width: 28px;
+            margin-right: 8px;
+
+            img {
+              min-width: 28px;
+              max-width: 28px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.header {
+  width: 100%;
+  height: 6vh;
+  display: flex;
+  align-items: center;
+  padding: 0 92px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  transition: all 0.5s ease;
+  z-index: 10;
+
+  &.hidden {
+    top: -80px;
+  }
+
+  &.white-bg {
+    background-color: white;
+
+    .go-home {
+      color: $gray_110 !important;
+    }
+  }
+
+  .go-home {
+    font-size: 16px;
+    font-family: 'Anton', sans-serif;
+    font-weight: 400;
+    color: white;
   }
 }
