--- a/css/common.css
+++ b/css/common.css
@@ -596,25 +596,58 @@ body {
 }
 .con .top-visual {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: #0B0B0B;
+  display: flex;
+  justify-content: center;
+}
+.con .top-visual .link-area {
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  width: 172px;
+  height: 41px;
+}
+.con .top-visual .out-link {
+  padding: 8px 24px;
+  position: fixed;
+  bottom: 0;
+  background: #FFFFFF;
+  display: flex;
+  align-items: center;
+  transition: all 0.2s ease-out;
+}
+.con .top-visual .out-link span {
+  font-size: 14px;
+  color: #212121;
+  margin-right: 8px;
+}
+.con .top-visual .out-link svg {
+  transition: all 0.2s ease-out;
+}
+.con .top-visual .out-link:hover svg {
+  transform: translateX(5px);
 }
 .con .top-visual .hero-pc {
   display: flex;
-  min-height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
 }
 .con .top-visual .hero-mo {
   display: none;
-  min-height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
 }
 .con .top-visual img {
-  width: 100%;
   height: 100%;
-  background-size: cover;
+  width: 100%;
+  background-size: contain;
+  object-fit: cover;
 }
 .con .sec-detail {
   max-width: 1024px;
@@ -657,7 +690,7 @@ body {
   line-height: 1.6;
 }
 .con .sec-detail span {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   color: #212121;
 }
@@ -673,7 +706,7 @@ body {
   margin-top: 24px;
 }
 .con .sec-detail .summary dl dt {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
   letter-spacing: -0.1px;
   line-height: 24px;
@@ -684,6 +717,7 @@ body {
   font-weight: 400;
   display: flex;
   margin-top: 8px;
+  font-size: 14px;
 }
 .con .sec-detail .summary dl dd span {
   min-width: 28px;
