--- a/css/common.scss
+++ b/css/common.scss
@@ -783,27 +783,67 @@ body {
 
   .top-visual {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: $gray_120;
+    display: flex;
+    justify-content: center;
+
+    .link-area {
+      display: flex;
+      justify-content: flex-end;
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      z-index: 5;
+      width: 172px;
+      height: 41px;
+    }
+
+    .out-link {
+      padding: 8px 24px;
+      position: fixed;
+      bottom: 0;
+      background: $white;
+      display: flex;
+      align-items: center;
+      transition: all .2s ease-out;
+
+      span {
+        font-size: 14px;
+        color: $gray_110;
+        margin-right: 8px;
+      }
+
+      svg {
+        transition: all .2s ease-out;
+      }
+
+      &:hover {
+        svg {
+          transform: translateX(5px);
+        }
+      }
+    }
 
     .hero-pc {
       display: flex;
-      min-height: 100vh;
+      height: 100%;
       justify-content: center;
       align-items: center;
     }
 
     .hero-mo {
       display: none;
-      min-height: 100vh;
+      height: 100%;
       justify-content: center;
       align-items: center;
     }
 
     img {
-      width: 100%;
       height: 100%;
-      background-size: cover;
+      width: 100%;
+      background-size: contain;
+      object-fit: cover;
     }
   }
 
@@ -854,7 +894,7 @@ body {
     }
 
     span {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
       color: $gray_110;
     }
@@ -871,7 +911,7 @@ body {
         margin-top: 24px;
 
         dt {
-          font-size: 16px;
+          font-size: 14px;
           font-weight: 700;
           letter-spacing: -.1px;
           line-height: 24px;
@@ -883,6 +923,7 @@ body {
           font-weight: 400;
           display: flex;
           margin-top: 8px;
+          font-size: 14px;
           
           span {
             min-width: 28px;
