--- a/css/common.scss
+++ b/css/common.scss
@@ -984,6 +984,10 @@ body {
       transition: all .2s ease-out;
 
       &.next {
+        align-items: flex-start;
+      }
+
+      &.prev {
         align-items: flex-end;
       }
 
@@ -1038,7 +1042,7 @@ body {
           svg {
   
             &.next-svg {
-              transform: translateX(5px);
+              transform: translateX(-5px);
             }
           }
         }
@@ -1061,7 +1065,7 @@ body {
           svg {
   
             &.pre-svg {
-              transform: translateX(-5px);
+              transform: translateX(5px);
             }
           }
         }
